<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/emptyStateContainer"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_horizontal|center_vertical">

    <ImageView
        android:id="@+id/iconError"
        android:layout_width="@dimen/empty_icon_size"
        android:layout_height="@dimen/empty_icon_size"
        android:src="@drawable/ic_access_time_white_48dp"
        android:tint="@color/white"/>

    <TextView
        android:id="@+id/txError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:text="@string/default_var"
        android:textColor="@color/white"
        android:textSize="@dimen/font_big"/>

    <Button
        android:id="@+id/btnReTry"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_size"
        android:paddingRight="@dimen/margin_default"
        android:paddingLeft="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_big"
        android:textAllCaps="false"
        android:text="@string/btn_retry"
        android:textColor="@color/grey"
        android:textSize="@dimen/font_big"
        android:background="@color/colorAccent"/>

    <Button
        android:id="@+id/btnConectar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_size"
        android:paddingRight="@dimen/margin_default"
        android:paddingLeft="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_big"
        android:visibility="gone"
        android:textAllCaps="false"
        android:text="@string/btn_conection"
        android:textColor="@color/grey"
        android:textSize="@dimen/font_big"
        android:background="@color/colorAccent"/>

    <Button
        android:id="@+id/btnNovaBusca"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_size"
        android:paddingRight="@dimen/margin_default"
        android:paddingLeft="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_big"
        android:visibility="gone"
        android:textAllCaps="false"
        android:text="@string/btn_search"
        android:textColor="@color/grey"
        android:textSize="@dimen/font_big"
        android:background="@color/colorAccent"/>

</LinearLayout>