<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_small"
    android:layout_marginRight="@dimen/margin_small"
    android:layout_marginTop="@dimen/margin_small"
    android:layout_marginBottom="@dimen/margin_small"
    android:elevation="2dp"
    app:cardBackgroundColor="@color/white"
    app:cardUseCompatPadding="true"
    android:weightSum="2">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:paddingTop="@dimen/margin_default"
            android:padding="@dimen/margin_default"
            android:paddingRight="@dimen/margin_default"
            android:weightSum="2">

            <TextView
                android:id="@+id/txLocate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_var"
                android:maxLines="2"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:textSize="@dimen/font_big"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:gravity="center_vertical"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/weatherIcon"
                    android:layout_width="@dimen/img_weather_list_size"
                    android:layout_height="@dimen/img_weather_list_size"
                    android:layout_marginRight="@dimen/margin_small"
                    tools:src="@drawable/ic_app"/>

                <TextView
                    android:id="@+id/txWeatherDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="chuva forte com vento"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/font_title"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/margin_default">

            <TextView
                android:id="@+id/txTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:gravity="right"
                android:text="@string/temp"
                android:textColor="@color/grey"
                android:textStyle="normal"
                android:textSize="@dimen/font_large"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txMin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_micro"
                    android:gravity="right"
                    android:text="@string/min_temp"
                    android:textColor="@color/grey"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_normal"/>

                <TextView
                    android:id="@+id/txMax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/max_temp"
                    android:textColor="@color/grey"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_normal"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>